added swagger documentation for login, register, forgoten and resset password routes
